fixed buttons color letter spacing and changed png icons to svg

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -19,7 +19,7 @@
   left: 0;
   right: 0;
   font-size: 22px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 .whistle:hover {
@@ -51,7 +51,7 @@
   left: 0;
   right: 0;
   font-size: 22px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 .safe:hover {
@@ -83,7 +83,7 @@
   left: 0;
   right: 0;
   font-size: 22px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 
 }
 
